Page MenuHome GnuPG

Kleopatra: Fix (accessibility) issues found while testing with NVDA
Closed, ResolvedPublic

Event Timeline

ikloecker triaged this task as Normal priority.Aug 23 2022, 5:05 PM
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Aug 23 2022, 5:52 PM

I found the following issues while testing with NVDA:

  1. In the Certificate Details dialog NVDA does not read the labels associated to the key properties when a property gets focus, e.g. it reads the expiration date, but it does not read the label "Valid until".
  2. In the Certify dialog the "Advanced" expander lacks a focus indicator.
  3. In the Certify dialog the explicitly shown tool tips are not read.
  4. In the Certify dialog the explicitly shown tool tips are immediately closed if the mouse pointer is over them or if the mouse is moved a short distance.
  5. When a dialog is opened, then a label that has initial input focus lacks a focus indicator.
  1. In the Certificate Details dialog NVDA does not read the labels associated to the key properties when a property gets focus, e.g. it reads the expiration date, but it does not read the label "Valid until".

This has been fixed.

  1. In the Certify dialog the explicitly shown tool tips are not read.
  2. In the Certify dialog the explicitly shown tool tips are immediately closed if the mouse pointer is over them or if the mouse is moved a short distance.

This is handled by T6262: Kleopatra: Remove info buttons from Certify dialog.

  1. When a dialog is opened, then a label that has initial input focus lacks a focus indicator.

This is standard behavior of Qt and many other applications where keyboard focus is not indicated prominently before the user has changed the focus with a keyboard interaction.

  1. In the Certify dialog the "Advanced" expander lacks a focus indicator.

This seems to be caused by setting the border of the QToolButton (that is used for the "Advanced" expander/collapser) to none. Apparently, the Windows style doesn't draw the focus rect if the button has no border. (Interestingly, setting the border to none via style sheet also affects the background color of the tool button.)

  1. In the Certify dialog the "Advanced" expander lacks a focus indicator.

This has now also been fixed.

ikloecker changed the task status from Open to Testing.Nov 2 2022, 10:54 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Ready for testing

ebo claimed this task.
ebo added a subscriber: ebo.

closing with reference to external testing

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:49 PM