Fix tool tip for S/MIME CSR and set accessible description

S/MIME CSRs are now created with a different action since we split the
creation of OpenPGP key pairs and S/MIME CSRs. Improve tool tip of
Import button by adding "certificate" to make more clear what is imported
from a file.

Set a plain-text version of the tool tip as accessible description to
prevent screen readers from speaking HTML tags literally.

GnuPG-bug-id: 6149